<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium"
        >

        <TextView
            android:id="@+id/title"
            style="@style/TitleItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/subtitle"
            style="@style/SubtitleItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="@dimen/xsmall"
            />

        <TextView
            android:id="@+id/precipitation"
            style="@style/PrecipitationSmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precipitation_format"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/xsmall"
            />

        <TextView
            android:id="@+id/timestamp"
            style="@style/TimestampTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestamp_format"
            app:layout_constraintTop_toBottomOf="@id/precipitation"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/xsmall"
            />


        <LinearLayout
            android:id="@+id/temp_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
        <TextView
            android:id="@+id/current_temp"
            style="@style/CurrentTempSmallStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_format"
            android:layout_gravity="center"
            />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <TextView
                    android:id="@+id/hi_temp"
                    style="@style/HiLowTempStyle"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp_format"
                    />
                <TextView
                    android:id="@+id/low_temp"
                    style="@style/HiLowTempStyle"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp_format"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>